--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "electron ."
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "electron": "^25.9.8",
     "js-yaml": "^4.1.0",
     "properties-reader": "^2.1.1"
